# dissertation

./: .gitignore  README.md  framework.drawio  pyproject.toml
notebooks/: case_study_generated.ipynb  case_study_ostrava.ipynb  fajnova_projekty.ipynb  graphs.ipynb  nuclear_energy.ipynb  retweet_weights.ipynb  semivariance.ipynb  sentiment_benchmark.ipynb  sentiment_fuzzy_sets.ipynb  sentiment_likes_correlation.ipynb  stability_analysis.ipynb  topic_modeling_benchmark.ipynb
