[tool.poetry]
name = "dissertation"
version = "0.1.0"
description = ""
authors = ["Milos Svana <milos.svana@mailfence.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
textblob = "^0.17.1"
jupyterlab = "^4.0.4"
vadersentiment = "^3.3.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
