[tool.poetry]
name = "dissertation"
version = "0.1.0"
description = ""
authors = ["Milos Svana <milos.svana@mailfence.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
textblob = "^0.17.1"
jupyterlab = "^4.0.4"
vadersentiment = "^3.3.2"
jupyter = "^1.0.0"
llvmlite = "^0.40.1"
bertopic = "^0.15.0"
nvidia-cuda-runtime-cu11 = "^11.8.89"
nvidia-cublas-cu11 = "^11.11.3.6"
nvidia-cudnn-cu11 = "^8.9.4.25"
nvidia-cuda-cupti-cu11 = "~11.7"
nvidia-cufft-cu11 = "^10.9.0.58"
nvidia-curand-cu11 = "^10.3.0.86"
nvidia-cusolver-cu11 = "^11.4.1.48"
nvidia-cusparse-cu11 = "^11.7.5.86"
nvidia-nccl-cu11 = "^2.18.3"
nvidia-nvtx-cu11 = "^11.8.86"
gensim = "^4.3.1"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
